fix some thumbs wrap

--- a/assets/style.css
+++ b/assets/style.css
@@ -62,25 +62,26 @@ header i:nth-child(2) {
 /* #endregion header */
 
 /*  #region main */
+main {}
+
 .all-thumbs {
-    justify-content: flex-start;
-    /* flex-wrap: wrap; */
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 .user {
     position: relative;
     justify-content: flex;
-    margin: 5px;
+    padding: 5px;
 
 }
 
-.user img {
-    max-width: calc(100Vw / 7);
-}
+.user img {}
 
 .speaker {
     position: absolute;
-    bottom: 0;
+    bottom: 5px;
+    /* come il padding */
     left: 0;
     padding: 8px;
     background-color: rgba(128, 128, 128, 0.323);
